--- a/app/assets/stylesheets/components/forms/_devise.scss
+++ b/app/assets/stylesheets/components/forms/_devise.scss
@@ -81,9 +81,11 @@
   }
 }
 
-.register-devise {
-  .form-group {
-    margin: 0;
+.edit-user-main-container {
+  .form-control {
+    border-radius: 8px;
+    // font-size: 16px;
+    padding: 10px 15px;
   }
 }
 
