--- a/app/assets/stylesheets/components/forms/_password_toggle.scss
+++ b/app/assets/stylesheets/components/forms/_password_toggle.scss
@@ -1,8 +1,12 @@
-.toggle-password {
-  float: right;
-  top: 26px;
-  right: 12px;
+.password-holder {
   position: relative;
+}
+
+.toggle-password {
+  //float: right;
+  top: 12px;
+  right: 12px;
+  position: absolute;
   z-index: 2;
   color: gray;
 }
